# ps-watcher

./: .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.PL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  config.guess  config.sub  configure  configure.ac  missing  mkinstalldirs  post-configure.in  ps-watcher  ps-watcher.in.in  touch.pl
debian/: NEWS  README.Debian  changelog  control  copyright  cron.d.ex  default  docs  init.d  postinst  postinst.ex  postrm.ex  preinst  preinst.ex  prerm  prerm.ex  rules  service  source.lintian-overrides  watch
debian/patches/: 00list  01_add_pidfile_support.dpatch  ps_binary  series
debian/source/: options
debian/upstream/: metadata
docs/: Makefile.am  Makefile.in  ps-watcher.8  ps-watcher.html
samples/: README  port-watch.ini  root-procs.ini  sample.ini  sample2.ini  solaris.ini
tests/: 01.pod.t  01.pod.t.in  Makefile.am  Makefile.in  args.cnf  args.t  args.t.in  basic.cnf  basic.cnf.in  basic.t  basic.t.in  count.cnf  count.t  count.t.in  driver  full.cnf  full.t  full.t.in  paction.cnf  paction.t
